feat: add support for local Llama models

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
+# Only used if MODE is 'REPLICATE'.
 REPLICATE_API_TOKEN=
-DISCORD_API_TOKEN=
 REPLICATE_MODEL=
+
+# Usually models/model-name.bin.
+# Only used if MODE is 'LOCAL'.
+LOCAL_MODEL_PATH=
+
+# 'LOCAL' or 'REPLICATE'
+MODE=
+
+# https://discord.com/developers/docs/intro
+DISCORD_API_TOKEN=
